# ActiveCampaignCpp

./: LICENSE  README.md
ActiveCampaignCpp/: ActiveCampaignCpp.sln  ActiveCampaignCpp.vcxproj  ActiveCampaignCpp.vcxproj.filters  CMakeLists.txt
ActiveCampaignCpp/include/: Account.hpp  ActiveCampaign.hpp  ActiveCampaignFactory.hpp  Address.hpp  AutoRegister.hpp  Automation.hpp  Branding.hpp  Campaign.hpp  Config.hpp  Contact.hpp  Deal.hpp  Exception.hpp  Form.hpp  Group.hpp  HttpOps.hpp  HttpOpsFactory.hpp  IActiveCampaign.hpp  LibCurl.hpp  List.hpp  Message.hpp  Organization.hpp  Settings.hpp  SingleSignOn.hpp  Tags.hpp  Tasks.hpp  UrlHandler.hpp  User.hpp  Webhook.hpp
ActiveCampaignCpp/libcurl/lib/: libcurl_a.lib
ActiveCampaignCpp/src/: Main.cpp
ActiveCampaignCpp/test/: CMakeLists.txt  Test.cpp
